// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thresholdReducer Should update unlooadEvaluator when checking hysteresis 1`] = `
{
  "conditions": [
    {
      "evaluator": {
        "params": [
          10,
          0,
        ],
        "type": "gt",
      },
      "unloadEvaluator": {
        "params": [
          10,
          0,
        ],
        "type": "lt",
      },
    },
  ],
  "expression": "",
  "refId": "A",
  "type": "threshold",
}
`;

exports[`thresholdReducer Should update unlooadEvaluator when unchecking hysteresis 1`] = `
{
  "conditions": [
    {
      "evaluator": {
        "params": [
          10,
          0,
        ],
        "type": "gt",
      },
      "unloadEvaluator": undefined,
    },
  ],
  "expression": "",
  "refId": "A",
  "type": "threshold",
}
`;

exports[`thresholdReducer should update Threshold Type, and unloadEvaluator params and type  1`] = `
{
  "conditions": [
    {
      "evaluator": {
        "params": [
          10,
        ],
        "type": "lt",
      },
      "unloadEvaluator": {
        "params": [
          10,
        ],
        "type": "gt",
      },
    },
  ],
  "expression": "",
  "refId": "A",
  "type": "threshold",
}
`;

exports[`thresholdReducer should update expression with RefId 1`] = `
{
  "conditions": [
    {
      "evaluator": {
        "params": [
          10,
          0,
        ],
        "type": "gt",
      },
      "unloadEvaluator": {
        "params": [
          10,
          0,
        ],
        "type": "lt",
      },
    },
  ],
  "expression": "B",
  "refId": "A",
  "type": "threshold",
}
`;

exports[`thresholdReducer should update unloadParams no error when are invalid 1`] = `
{
  "conditions": [
    {
      "evaluator": {
        "params": [
          10,
          0,
        ],
        "type": "gt",
      },
      "unloadEvaluator": {
        "params": [
          20,
          0,
        ],
        "type": "lt",
      },
    },
  ],
  "expression": "",
  "refId": "A",
  "type": "threshold",
}
`;

exports[`thresholdReducer should update unloadParams with no error when are valid 1`] = `
{
  "conditions": [
    {
      "evaluator": {
        "params": [
          10,
          0,
        ],
        "type": "gt",
      },
      "unloadEvaluator": {
        "params": [
          9,
          0,
        ],
        "type": "lt",
      },
    },
  ],
  "expression": "",
  "refId": "A",
  "type": "threshold",
}
`;
